# libuw12

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  LICENSE  README.md  citation.bib  libuw12.cpp  libuw12.hpp
.github/workflows/: cmake-multi-platform.yml  cmake-ubutu.yml  todo_issues.yml  todos.yml
doc/doxygen/xml/: Doxyfile.xml  _r_e_a_d_m_e_8md.xml  base__integrals_8cpp.xml  base__integrals_8hpp.xml  catch_8hpp.xml  class_auto_restore_rdbuf.xml  classuw12_1_1integrals_1_1_base_integrals.xml  classuw12_1_1integrals_1_1_integrals.xml  conf_8py.xml  density__utils_8hpp.xml  dir_118899b4fdb9a0d69a9fe4e7c38d4855.xml  dir_313caf1132e152dd9b58bea13a4052ca.xml  dir_355b1783f15d18c2e87c686367b72bbc.xml  dir_3f6157423b1e24fbbe29232d89e92d45.xml  dir_59425e443f801f1f2fd8bbe4959a3ccf.xml  dir_600576376c5ae74fbadbec4c51b01645.xml  dir_60f414d0f51ec624552476ef507bca14.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_6ce324e869b3a7fa2de81dce37859b2a.xml  dir_714e08f3c5d036063c69130624be6a28.xml  dir_95e29a8b8ee7c54052c171a88bb95675.xml  dir_98bdc71456d91e98ad7db1f65be00bd8.xml  dir_9c7f28bfd3df7403d6eedf39ab7cc4f1.xml  dir_a50b49bc3b7c12e387f10bfc5a719320.xml  dir_c4135c86bf1f897c1a24f6801c8b3302.xml  dir_c8f82bb8d27220ee614e77a52fa1a13e.xml  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.xml  dir_e68e8157741866f444e17edd764ebbae.xml  dir_e9a1c2edfe0d6dc632984163df95496b.xml  dir_f7bc19fae8d0e3ff6fd080b15acc732a.xml  direct__utils_8cpp.xml  direct__utils_8hpp.xml  example_2_r_e_a_d_m_e_8md.xml  example_8cpp.xml  four__electron_8cpp.xml  four__electron_8hpp.xml  four__electron__utils_8cpp.xml  four__electron__utils_8hpp.xml  index.xml  indexpage.xml  (+64 more)
doc/sphinx/: Makefile  conf.py  index.rst  installation.rst  introduction.rst
docs/: CMakeLists.txt  Makefile  conf.py  environment.yml  index.rst  introduction.rst  requirements.txt
example/: CMakeLists.txt  README.md  example.cpp
src/: CMakeLists.txt  config.hpp.in  uw12.cpp  uw12.hpp
src/four_electron/: CMakeLists.txt  four_electron.cpp  four_electron.hpp  four_electron_utils.cpp  four_electron_utils.hpp
src/integrals/: CMakeLists.txt  base_integrals.cpp  base_integrals.hpp  integral_functions.hpp  integrals.cpp  integrals.hpp  transformations.hpp
src/three_electron/: CMakeLists.txt  direct_utils.cpp  direct_utils.hpp  indirect_utils.cpp  indirect_utils.hpp  ri_utils.hpp  three_electron.cpp  three_electron.hpp
src/two_electron/: CMakeLists.txt  two_electron.cpp  two_electron.hpp
src/utils/: linalg.hpp  parallel.hpp  print.hpp  utils.hpp
test_data/water/: S.csv  V2.csv  V3.csv  W2.csv  W3.csv  WV2.csv  WV3.csv  energy_cation.csv  energy_neutral.csv  fock.csv  fock_alpha.csv  fock_beta.csv  occ.csv  occ_alpha.csv  occ_beta.csv  orbitals.csv  orbitals1.csv  orbitals_alpha.csv  orbitals_beta.csv
tests/: CMakeLists.txt  catch.hpp  check_fock.hpp  density_utils.hpp  multi_el_test_utils.hpp  numerical_fock.hpp  setup_integrals.hpp  test_base_integrals.cpp  test_data.hpp  test_density_utils.cpp  test_fock_utils.cpp  test_four_el.cpp  test_four_el_utils.cpp  test_integral_functions.cpp  test_integral_transformations.cpp  test_integrals.cpp  test_linalg.cpp  test_linalg_mat.cpp  test_linalg_mat_op.cpp  test_linalg_vec.cpp  test_numerical_fock.cpp  test_parallel.cpp  test_print.cpp  test_ri_utils.cpp  test_three_el.cpp  test_three_el_direct_utils.cpp  test_three_el_indirect_utils.cpp  test_two_el.cpp  test_utils.cpp  test_uw12.cpp  test_water.cpp
